# polyhedron

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  (+3 more)
tests/: conftest.py  test_additional_small_gaps_extra.py  test_backends_and_plugins_extra.py  test_backends_base_and_compiler_extra.py  test_branching.py  test_business_modeling.py  test_compiler.py  test_contracts.py  test_contracts_runtime_extra.py  test_core.py  test_core_errors_extra.py  test_core_expression_variable_scenario_extra.py  test_core_model_extra.py  test_core_model_heuristics_missing_extra.py  test_core_validation_solution_extra.py  test_data.py  test_examples_new_extra.py  test_expression_variable_missing_extra.py  test_feature_stack_integration.py  test_glpk_solver_extra.py  test_graph_modeling.py  test_gurobi_solver_extra.py  test_heuristics.py  test_highs_solver_extra.py  test_intelligence.py  test_intelligence_validation_scenario_extra.py  test_milp_comprehensive_optima.py  test_model_solver_paths_extra.py  test_modeling_indexed_extra.py  test_modeling_reporting_extra.py  test_modeling_transforms_uncertainty_extra.py  test_multi_objective_and_quadratic_extra.py  test_objectives.py  test_performance.py  test_plugins_and_units_missing_extra.py  test_pyomo_bridge.py  test_quality_explainability.py  test_quality_infeasibility.py  test_quality_linter.py  test_quantum_phr_alm.py  (+17 more)
(+129 files in other folders)
