[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "polyhedron-opt"
version = "0.1.0"
description = "Optimization modeling framework with domain-driven modeling and solver intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "RhineQC GmbH" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "typing-extensions>=4.10.0"
]

[project.optional-dependencies]
scip = ["pyscipopt>=4.4.0"]
gurobi = ["gurobipy>=13.0.1"]
data = ["pandas>=2.0.0", "polars>=0.20.0", "SQLAlchemy>=2.0.0"]
contracts = ["pydantic>=2.0.0"]
bridge = ["pyomo>=6.0.0"]
docs = ["sphinx>=7.3,<9.0", "sphinx-rtd-theme>=2.0"]

[project.urls]
Homepage = "https://github.com/RhineQC/polyhedron"
Repository = "https://github.com/RhineQC/polyhedron"

[tool.hatch.build.targets.wheel]
packages = ["src/polyhedron"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "LICENSE"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
